[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/GUI.gd" type="Script" id=1]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 1673.0
margin_top = 2.0
margin_right = 1916.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Velocity" type="Label" parent="Control/VBoxContainer"]
margin_right = 243.0
margin_bottom = 14.0
text = "asdasd"

[node name="MouseLocation" type="Label" parent="Control/VBoxContainer"]
margin_top = 18.0
margin_right = 243.0
margin_bottom = 32.0
text = "asdasdasd"

[node name="CameraAngle2" type="Label" parent="Control/VBoxContainer"]
margin_top = 36.0
margin_right = 243.0
margin_bottom = 50.0
text = "asdasdasd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraAngle" type="Label" parent="Control/VBoxContainer"]
margin_top = 54.0
margin_right = 243.0
margin_bottom = 68.0
text = "asdasdasd"
__meta__ = {
"_edit_use_anchors_": false
}
